[master] Fixed layout bug

--- a/client/src/common/components/Layout/Layout.module.css
+++ b/client/src/common/components/Layout/Layout.module.css
@@ -1,4 +1,5 @@
 .main_layout {
+    min-height: 100vh;
     height: 100%;
     width: 100%;
     display: flex;
